--- a/E+M/ph631_layout2.tex
+++ b/E+M/ph631_layout2.tex
@@ -23,12 +23,12 @@ allcolors=blue,
 \vfill\end{figure}}
 \newcommand{\ignore}[1]{}
 
-\newcommand{\pffig}[4]{\begin{figure}[h]%\vfill
+\newcommand{\pffig}[5]{\begin{figure}[h]%\vfill
 \begin{centering}
 %\newcommand{\unitz}{\bm{\hat{z}}}
-\includegraphics[width=#2]{#1}
+\includegraphics[width=#2, alt={#3} ]{#1}
 % \hbox{\hskip 1 in\epsfxsize=#2\epsfbox{#1}\hfill}
-\caption{#3}\label{#4}
+\caption{#4}\label{#5}
 \end{centering}
 \vfill\end{figure}}
 
